# lab3

./: CMakeLists.txt  DrawingParameters.h  ObjParametersTuple.c  ObjParametersTuple.h  PackedVertex.c  PackedVertex.h  main.c  my_obj_parser.c  my_obj_parser.h
lists/: ListOfFaces.c  ListOfFaces.h  ListOfNormals.c  ListOfNormals.h  ListOfTextures.c  ListOfTextures.h  ListOfVertices.c  ListOfVertices.h
